@@ -222,14 +222,6 @@ iwconfig_setup_specific() {
 
 	iwconfig_set_mode "${iface}" "${mode}"
 
-	channel="channel_${ifvar}"
-	# We default the channel to 3
-	channel="${!channel:-3}"
-	if ! iwconfig "${iface}" channel "${channel}" ; then
-		ewarn "${iface} does not support setting the channel to \"${channel}\""
-		return 1
-	fi
-
 	# Now set the key
 	if ! iwconfig "${iface}" key ${key} ; then
 		if [[ ${key} != "off" ]]; then
@@ -244,6 +236,13 @@ iwconfig_setup_specific() {
 		return 1
 	fi
 
+	channel="channel_${ifvar}"
+	# We default the channel to 3
+	if ! iwconfig "${iface}" channel "${!channel:-3}" ; then
+		ewarn "${iface} does not support setting the channel to \"${!channel:-3}\""
+		return 1
+	fi
+	
 	# Finally apply the user Config
 	iwconfig_user_config "${iface}" "${ESSIDVAR}"
 	
@@ -378,6 +377,12 @@ iwconfig_associate() {
 		[[ ${key} != "off" ]] && w=$(iwconfig_get_wep_status "${iface}")
 	fi
 
+	if ! iwconfig "${iface}" essid "${ESSID}" ; then
+		if [[ ${ESSID} != "any" ]]; then
+			ewarn "${iface} does not support setting ESSID to \"${dessid}\""
+		fi
+	fi
+
 	# Only use channel or frequency
 	if [[ -n ${chan} ]] ; then
 		iwconfig "${iface}" channel "${chan}"
@@ -385,13 +390,7 @@ iwconfig_associate() {
 		iwconfig "${iface}" freq "${freq}"
 	fi
 	[[ -n ${mac} ]] && iwconfig "${iface}" ap "${mac}"
-
-	if ! iwconfig "${iface}" essid "${ESSID}" ; then
-		if [[ ${ESSID} != "any" ]]; then
-			ewarn "${iface} does not support setting ESSID to \"${dessid}\""
-		fi
-	fi
-
+	
 	# Finally apply the user Config
 	iwconfig_user_config "${iface}" "${ESSIDVAR}"
 
@@ -481,7 +480,8 @@ iwconfig_scan() {
 				;;
 			*Frequency:*)
 				freq[i]="${line#*:}"
-				freq[i]="${freq[i]%% *}"
+				x="${freq[i]#* }"
+				freq[i]="${freq[i]%% *}${x:0:1}"
 				;;
 			*Channel:*)
 				chan[i]="${line#*:}"
