@@ -5,6 +5,8 @@
 
     Only send a process the TERM signal once, #141832
 
+    Set frequency, channel and ap after ESSID, #143716 thanks to damage.
+
   13 Aug 2006; Roy Marples <uberlord@gentoo.org>:
 
     Drop -o from dhcpcd options as all dhcpcd versions in portage have been
